package com.example.fabricmethod.model;

public interface IFactory{
    MyShape createPolygon(int numberOfSides);
}
