@startuml

title __MODEL's Class Diagram__\n


    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.Angle {
            + draw()
        }
      }
    }

  


    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.Circle {
            + draw()
        }
      }
    }

  


    namespace om.example.fabricmethod {
      namespace model {
        interface com.example.fabricmethod.model.IFactory {
            {abstract} + createPolygon()
        }
      }
    }

  


    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.Lines {
            + draw()
        }
      }
    }

  


    namespace om.example.fabricmethod {
      namespace model {
        abstract class com.example.fabricmethod.model.MyShape {
            # color : Color
            # x : double
            # y : double
            {abstract} + draw()
            + getColor()
            + getX()
            + getY()
            + setColor()
            + setX()
            + setY()
        }
      }
    }

  


    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.ShapeFactory {
            + createPolygon()
        }
      }
    }

  

  com.example.fabricmethod.model.Angle -up-|> com.example.fabricmethod.model.MyShape
  com.example.fabricmethod.model.Circle -up-|> com.example.fabricmethod.model.MyShape
  com.example.fabricmethod.model.Lines -up-|> com.example.fabricmethod.model.MyShape
  com.example.fabricmethod.model.ShapeFactory .up.|> com.example.fabricmethod.model.IFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
